# ddMultiagentCoordinationSym

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  package.xml
config/: circular_formation_robot.yaml  config.yaml  launch_config.yaml
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  target.xacro
launch/: launch_mas_control.launch.py  launch_mas_control.py  launch_mas_control_no_robots.launch.py  launch_proportional_control.py  launch_sim.launch.py  rsp.launch.py  rsp_multi_robots.launch.py
src/: MultiAgentControl.cpp  MultiAgentControl.h  TrackingControl.cpp  TrackingControl.h  accel_to_cmd_vel.cpp  articleConstantValues.cpp  articleConstantValues.h  com_to_pt_odom.cpp  control_system_proportional.cpp  create_target_positions.cpp  multiagent_controller.cpp  point_mass_dynamics.cpp  secondOrderDynamics.cpp  secondOrderDynamics.h  step_accel.cpp  targetPositionGenerator.cpp  targetPositionGenerator.h  tracking_control.cpp  utilities.h
worlds/: empty.world
